{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 445,
  "lineage": "9499a6fb-b1fc-104f-6822-afbc17fbe5a2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:569551094392:vpc/vpc-1124ca68",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-75180e1e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-5ad48d3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1124ca68",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-ed524294",
            "owner_id": "569551094392",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_node_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:569551094392:security-group/sg-0b5ecd7f40e21cd5f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5ecd7f40e21cd5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EKSClusterNodeGroupSecurityGroup",
            "name_prefix": "",
            "owner_id": "569551094392",
            "revoke_rules_on_delete": false,
            "tags": {
              "Delete": "true",
              "Name": "hamzaelaouane-eks-cluster-tag",
              "Terraform": "true",
              "kubernetes.io/cluster/hamzaelaouane-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-1124ca68"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2158028002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072ec710b123ac45e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_eks_cluster.voting_app_eks_cluster",
            "aws_eks_node_group.hamzaVotingApp_node",
            "aws_iam_role.hamzaVotingApp-eks-cluster",
            "aws_iam_role.hamzaVotingApp-eks-cluster-node-group",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-AmazonEKSServicePolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEC2ContainerRegistryReadOnly",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEKS_CNI_Policy",
            "aws_key_pair.ssh",
            "aws_security_group.eks_cluster_node_group",
            "aws_subnet.voting_app_subnet"
          ]
        },
        {
          "index_key": "30333",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30333,
            "id": "sgrule-3324067060",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072ec710b123ac45e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 30333,
            "type": "ingress"
          },
          "dependencies": [
            "aws_eks_cluster.voting_app_eks_cluster",
            "aws_eks_node_group.hamzaVotingApp_node",
            "aws_iam_role.hamzaVotingApp-eks-cluster",
            "aws_iam_role.hamzaVotingApp-eks-cluster-node-group",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-AmazonEKSServicePolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEC2ContainerRegistryReadOnly",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEKS_CNI_Policy",
            "aws_key_pair.ssh",
            "aws_security_group.eks_cluster_node_group",
            "aws_subnet.voting_app_subnet"
          ]
        },
        {
          "index_key": "31000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 31000,
            "id": "sgrule-2674741521",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072ec710b123ac45e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 31000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_eks_cluster.voting_app_eks_cluster",
            "aws_eks_node_group.hamzaVotingApp_node",
            "aws_iam_role.hamzaVotingApp-eks-cluster",
            "aws_iam_role.hamzaVotingApp-eks-cluster-node-group",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-AmazonEKSServicePolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEC2ContainerRegistryReadOnly",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEKS_CNI_Policy",
            "aws_key_pair.ssh",
            "aws_security_group.eks_cluster_node_group",
            "aws_subnet.voting_app_subnet"
          ]
        },
        {
          "index_key": "31001",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 31001,
            "id": "sgrule-573101886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072ec710b123ac45e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 31001,
            "type": "ingress"
          },
          "dependencies": [
            "aws_eks_cluster.voting_app_eks_cluster",
            "aws_eks_node_group.hamzaVotingApp_node",
            "aws_iam_role.hamzaVotingApp-eks-cluster",
            "aws_iam_role.hamzaVotingApp-eks-cluster-node-group",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-AmazonEKSServicePolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEC2ContainerRegistryReadOnly",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.hamzaVotingApp-eks-cluster-node-group-AmazonEKS_CNI_Policy",
            "aws_key_pair.ssh",
            "aws_security_group.eks_cluster_node_group",
            "aws_subnet.voting_app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "voting_app_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:569551094392:subnet/subnet-0499188660928842a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.31.100.0/24",
            "id": "subnet-0499188660928842a",
            "map_public_ip_on_launch": true,
            "owner_id": "569551094392",
            "tags": {
              "Delete": "true",
              "Name": "hamzaelaouane-eks-cluster-tag",
              "Terraform": "true",
              "kubernetes.io/cluster/hamzaelaouane-eks-cluster": "shared"
            },
            "vpc_id": "vpc-1124ca68"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:569551094392:subnet/subnet-0da25ed5194ed6947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.101.0/24",
            "id": "subnet-0da25ed5194ed6947",
            "map_public_ip_on_launch": true,
            "owner_id": "569551094392",
            "tags": {
              "Delete": "true",
              "Name": "hamzaelaouane-eks-cluster-tag",
              "Terraform": "true",
              "kubernetes.io/cluster/hamzaelaouane-eks-cluster": "shared"
            },
            "vpc_id": "vpc-1124ca68"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:569551094392:subnet/subnet-02336a73e77886914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.31.102.0/24",
            "id": "subnet-02336a73e77886914",
            "map_public_ip_on_launch": true,
            "owner_id": "569551094392",
            "tags": {
              "Delete": "true",
              "Name": "hamzaelaouane-eks-cluster-tag",
              "Terraform": "true",
              "kubernetes.io/cluster/hamzaelaouane-eks-cluster": "shared"
            },
            "vpc_id": "vpc-1124ca68"
          }
        }
      ]
    }
  ]
}